# estudos

./: .gitignore  README.md
AngulaJs/aprendendo/: listaTelefonica.html
Animation/: index.html
Animation/scss/: main.scss
Chakra-UI/chakra-ui/: package.json
CleanArch/: package-lock.json  package.json
CleanArch/src/: main.ts
Criptografia/: cript.py
DesignPatterns/: .huskyrc.json  Dockerfile  docker-compose.yml  package.json
DynamoDB/: README.md  bun.lockb  docker-compose.yml  package.json
ES6/: bundle.js  index.html  main.js  package.json  style.css
Elixir/: test.exs
FetchApi/: main.js  package-lock.json  package.json
Firebase/: package.json  tsconfig.json
FlaxBox/: index.html
GCP/: consumer.js  package-lock.json  package.json  producer.js
Git-Commands/: Comandos.xlsx
GraphQL/: pyproject.toml
GraphQL/Node/: package-lock.json  package.json
GraphQL/Node/api/: index.js
GraphQL/Python/: pyproject.toml
GraphQL/server/: main.py  user.py
Grid/: grid.html  index.html
Js/: README.md
Kafka/python-kafka-worker/: consumer.py  producer.py  pyproject.toml
Kotlin/: main.kt
Layouts/: index.html
Load Balancer/: nginx  nginx.md
Machine Learning/: big-data.md  introdução.md  modelos-lineares.md
Node/: .gitignore  README.md
SOLID/: factory.py  links.py  main.py  pyproject.toml
Sass/: index.html
SecondApp/: settings.gradle
TDD/: Person.py  test_sample.py
Typescript/: package.json
VueJs/: README.md  index.html
WebSocket/: package.json  tsconfig.json
fast-api-tst/: asgi.py  pyproject.toml
fundamentos/: build.gradle.kts
(+2495 files in other folders)
